--- a/src/App.css
+++ b/src/App.css
@@ -11,17 +11,25 @@
 
 .body_white {
   text-align: center;
-  height: 100vh;
-  width: 100vw;
+  height: auto;
+  width: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   background-color: white;
+  border: solid 3px red;
 }
 
 .carousel_white {
-  background-color: white;
+  background-color: yellowgreen;
   margin-top: 30px;
+
+  max-height: 100vh;
+  max-width: 100vw;
+
+
+  border: solid 3px blue;
+  
 }
 
 .carousel_black {
@@ -154,8 +162,8 @@ li {
   and (max-device-width: 667px) 
   and (-webkit-min-device-pixel-ratio: 2) { 
     .CarouselSize {
-      height: 164px;
-      width: 375px;
+      height: 154px;
+      width: 359px;
     }
 }
 
@@ -206,8 +214,8 @@ li {
   and (max-device-width: 1600px) 
   and (-webkit-min-device-pixel-ratio: 1) { 
     .CarouselSize {
-      height: 240px;
-      width: 560px;
+      height: 220px;
+      width: 513px;
     }
 }
 
@@ -218,7 +226,7 @@ li {
   and (-webkit-min-device-pixel-ratio: 2)
   and (min-resolution: 192dpi) { 
     .CarouselSize {
-      height: 256px;
-      width: 600px;
+      height: 236px;
+      width: 550px;
     }
 }
