--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 
+* {
+  box-sizing: border-box;
+}
+
 .body_black {
   text-align: center;
-  height: 100vh;
-  width: 100vw;
+  height: auto;
+  width: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,7 +33,10 @@
 
 .carousel_black {
   background-color: black;
-  margin-top: 30px;
+  margin-top: 40px;
+  
+  max-height: 100vh;
+  max-width: 100vw;
 }
 
 button {
