--- a/src/App.css
+++ b/src/App.css
@@ -29,8 +29,8 @@
   
   max-height: 100vh;
   max-width: 100vw;
-  
-  border: 2px solid red;
+
+  /* border: 2px solid red; */
 }
 
 .carousel_black {
@@ -40,7 +40,7 @@
   max-height: 100vh;
   max-width: 100vw;
 
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 button {
@@ -98,6 +98,11 @@ nav {
   padding-right: 2px;
   height: 38px;
   color: blue;
+}
+
+h1 {
+  margin-top: 280px;
+  margin-bottom: 40px;
 }
 
 a {
