--- a/src/App.css
+++ b/src/App.css
@@ -171,18 +171,7 @@ li {
 @media only screen 
   and (min-device-width: 375px) 
   and (max-device-width: 667px) 
-  and (-webkit-min-device-pixel-ratio: 2) 
-  and (orientation: landscape) {
-
-    html {
-      transform: rotate(-90deg);
-      transform-origin: left top;
-      width: 100vh;
-      overflow-x: hidden;
-      position: absolute;
-      top: 100%;
-      left: 0;
-    }
+  and (-webkit-min-device-pixel-ratio: 2) {
 
     .CarouselSize {
       height: 154px;
