--- a/src/App.css
+++ b/src/App.css
@@ -48,19 +48,19 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: yellow;
+  background-color: hsl(60,100%,50%);
   padding-left: 15px;
   padding-right: 15px;
   border: none;
   height: 38px;
-  color: blue;
+  color: hsl(240,100%,50%);
   font-size: 18px;
   font-weight: 600;
   font-family: 'Helvetica Now', 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 button:hover {
-  color: red;
+  color: hsl(0,100%,50%);
 }
 button:active {
   border: none;
@@ -78,7 +78,7 @@ nav {
   justify-content: center;
   align-items: center;
   height: 38px;
-  background-color: yellow;
+  background-color: hsl(60,100%,50%);
 }
 
 .nav_links {
@@ -93,11 +93,11 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: yellow;
+  background-color: hsl(60,100%,50%);
   padding-left: 2px;
   padding-right: 2px;
   height: 38px;
-  color: blue;
+  color: hsl(240,100%,50%);
 }
 
 h1 {
