fixed black page bottom background colour

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,18 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-bottom: 100px;
+  background-color: black;
+  position: relative;
+}
+
+.body_black::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100px;
   background-color: black;
 }
 
