--- a/src/App.css
+++ b/src/App.css
@@ -232,7 +232,7 @@ li {
       width: 358px;
     }
     .nav_links {
-      width: 50%;
+      width: 358px;
       display: flex;
       justify-content: space-evenly;
       font-weight: 400;
