--- a/src/App.css
+++ b/src/App.css
@@ -175,6 +175,11 @@ li {
       height: 112px;
       width: 260px;
     }
+    button:hover {
+      color: hsl(0, 100%, 100%);
+      border-bottom: none;
+      box-shadow: none;
+    }
     .frame-overlay-dark-grey {
       display: none;
     }
@@ -194,6 +199,11 @@ li {
       height: 120px;
       width: 278px;
     }
+    button:hover {
+      color: hsl(0, 100%, 100%);
+      border-bottom: none;
+      box-shadow: none;
+    }
     .frame-overlay-dark-grey {
       display: none;
     }
@@ -210,6 +220,11 @@ li {
     .CarouselSize {
       height: 120px;
       width: 278px;
+    }
+    button:hover {
+      color: hsl(0, 100%, 100%);
+      border-bottom: none;
+      box-shadow: none;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -229,6 +244,11 @@ li {
     .CarouselSize {
       height: 124px;
       width: 288px;
+    }
+    button:hover {
+      color: hsl(0, 100%, 100%);
+      border-bottom: none;
+      box-shadow: none;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -298,6 +318,11 @@ li {
       height: 166px;
       width: 386px;
     }
+    button:hover {
+      color: hsl(0, 100%, 100%);
+      border-bottom: none;
+      box-shadow: none;
+    }
     .frame-overlay-dark-grey {
       display: none;
     }
@@ -316,6 +341,11 @@ li {
     .CarouselSize {
       height: 280px;
       width: 652px;
+    }
+    button:hover {
+      color: hsl(0, 100%, 100%);
+      border-bottom: none;
+      box-shadow: none;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -336,6 +366,11 @@ li {
       height: 394px;
       width: 918px;
     }
+    button:hover {
+      color: hsl(0, 100%, 100%);
+      border-bottom: none;
+      box-shadow: none;
+    }
     .frame-overlay-dark-grey {
       display: none;
     }
@@ -355,6 +390,11 @@ li {
       height: 220px;
       width: 513px;
     }
+    button:hover {
+      color: hsl(0, 100%, 100%);
+      border-bottom: none;
+      box-shadow: none;
+    }
     .frame-overlay-dark-grey {
       display: none;
     }
@@ -372,6 +412,11 @@ li {
     .CarouselSize {
       height: 236px;
       width: 550px;
+    }
+    button:hover {
+      color: hsl(0, 100%, 100%);
+      border-bottom: none;
+      box-shadow: none;
     }
     .frame-overlay-dark-grey {
       display: none;
