--- a/src/App.css
+++ b/src/App.css
@@ -176,9 +176,7 @@ li {
       width: 260px;
     }
     button:hover {
-      color: hsl(0, 100%, 100%);
-      border-bottom: none;
-      box-shadow: none;
+      display: none;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -200,9 +198,7 @@ li {
       width: 278px;
     }
     button:hover {
-      color: hsl(0, 100%, 100%);
-      border-bottom: none;
-      box-shadow: none;
+      display: none;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -222,9 +218,7 @@ li {
       width: 278px;
     }
     button:hover {
-      color: hsl(0, 100%, 100%);
-      border-bottom: none;
-      box-shadow: none;
+      display: none;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -246,9 +240,7 @@ li {
       width: 288px;
     }
     button:hover {
-      color: hsl(0, 100%, 100%);
-      border-bottom: none;
-      box-shadow: none;
+      display: none;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -278,9 +270,7 @@ li {
       border: 2px solid blue;
     }
     button:hover {
-      color: hsl(0, 100%, 100%);
-      border-bottom: none;
-      box-shadow: none;
+      display: none;
     }
     .navigation-wrapper {
       padding-bottom: 0px;
@@ -319,9 +309,7 @@ li {
       width: 386px;
     }
     button:hover {
-      color: hsl(0, 100%, 100%);
-      border-bottom: none;
-      box-shadow: none;
+      display: none;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -343,9 +331,7 @@ li {
       width: 652px;
     }
     button:hover {
-      color: hsl(0, 100%, 100%);
-      border-bottom: none;
-      box-shadow: none;
+      display: none;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -367,9 +353,7 @@ li {
       width: 918px;
     }
     button:hover {
-      color: hsl(0, 100%, 100%);
-      border-bottom: none;
-      box-shadow: none;
+      display: none;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -391,9 +375,7 @@ li {
       width: 513px;
     }
     button:hover {
-      color: hsl(0, 100%, 100%);
-      border-bottom: none;
-      box-shadow: none;
+      display: none;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -414,9 +396,7 @@ li {
       width: 550px;
     }
     button:hover {
-      color: hsl(0, 100%, 100%);
-      border-bottom: none;
-      box-shadow: none;
+      display: none;
     }
     .frame-overlay-dark-grey {
       display: none;
