--- a/src/App.css
+++ b/src/App.css
@@ -175,8 +175,29 @@ li {
       height: 112px;
       width: 260px;
     }
+    button {
+      padding-left: 5px;
+      padding-right: 5px;
+      font-size: 15px;
+      font-weight: 500;
+      border: 2px solid blue;
+    }
     button:hover {
       display: none;
+    }
+    .navigation-wrapper {
+      padding-bottom: 0px;
+      background-color: blueviolet;
+      border: solid red 2px;
+    }
+    .nav_links {
+      width: 100%;
+      font-size: 15px;
+      font-weight: 500;
+    }
+    .nav_links_li {
+      padding-left: 0px;
+      padding-right: 0px;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -197,8 +218,29 @@ li {
       height: 120px;
       width: 278px;
     }
+    button {
+      padding-left: 5px;
+      padding-right: 5px;
+      font-size: 15px;
+      font-weight: 500;
+      border: 2px solid blue;
+    }
     button:hover {
       display: none;
+    }
+    .navigation-wrapper {
+      padding-bottom: 0px;
+      background-color: blueviolet;
+      border: solid red 2px;
+    }
+    .nav_links {
+      width: 100%;
+      font-size: 15px;
+      font-weight: 500;
+    }
+    .nav_links_li {
+      padding-left: 0px;
+      padding-right: 0px;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -217,8 +259,29 @@ li {
       height: 120px;
       width: 278px;
     }
+    button {
+      padding-left: 5px;
+      padding-right: 5px;
+      font-size: 15px;
+      font-weight: 500;
+      border: 2px solid blue;
+    }
     button:hover {
       display: none;
+    }
+    .navigation-wrapper {
+      padding-bottom: 0px;
+      background-color: blueviolet;
+      border: solid red 2px;
+    }
+    .nav_links {
+      width: 100%;
+      font-size: 15px;
+      font-weight: 500;
+    }
+    .nav_links_li {
+      padding-left: 0px;
+      padding-right: 0px;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -238,9 +301,29 @@ li {
     .CarouselSize {
       height: 124px;
       width: 288px;
+    }button {
+      padding-left: 5px;
+      padding-right: 5px;
+      font-size: 15px;
+      font-weight: 500;
+      border: 2px solid blue;
     }
     button:hover {
       display: none;
+    }
+    .navigation-wrapper {
+      padding-bottom: 0px;
+      background-color: blueviolet;
+      border: solid red 2px;
+    }
+    .nav_links {
+      width: 100%;
+      font-size: 15px;
+      font-weight: 500;
+    }
+    .nav_links_li {
+      padding-left: 0px;
+      padding-right: 0px;
     }
     .frame-overlay-dark-grey {
       display: none;
