--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,7 @@ nav {
   padding-left: 2px;
   padding-right: 2px;
   height: 38px;
-  color: hsl(240,100%,50%);
+  color: green;
 }
 
 /* NAVIGATION END */
@@ -175,8 +175,28 @@ li {
       height: 112px;
       width: 260px;
     }
+    button {
+      padding-left: 5px;
+      padding-right: 5px;
+      font-size: 15px;
+      font-weight: 500;
+    }
     button:hover {
       display: none;
+    }
+    .navigation-wrapper {
+      padding-bottom: 0px;
+      background-color: blueviolet;
+      border: solid red 2px;
+    }
+    .nav_links {
+      width: 100%;
+      font-size: 15px;
+      font-weight: 500;
+    }
+    .nav_links_li {
+      padding-left: 0px;
+      padding-right: 0px;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -197,8 +217,28 @@ li {
       height: 120px;
       width: 278px;
     }
+    button {
+      padding-left: 5px;
+      padding-right: 5px;
+      font-size: 15px;
+      font-weight: 500;
+    }
     button:hover {
       display: none;
+    }
+    .navigation-wrapper {
+      padding-bottom: 0px;
+      background-color: blueviolet;
+      border: solid red 2px;
+    }
+    .nav_links {
+      width: 100%;
+      font-size: 15px;
+      font-weight: 500;
+    }
+    .nav_links_li {
+      padding-left: 0px;
+      padding-right: 0px;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -217,8 +257,28 @@ li {
       height: 120px;
       width: 278px;
     }
+    button {
+      padding-left: 5px;
+      padding-right: 5px;
+      font-size: 15px;
+      font-weight: 500;
+    }
     button:hover {
       display: none;
+    }
+    .navigation-wrapper {
+      padding-bottom: 0px;
+      background-color: blueviolet;
+      border: solid red 2px;
+    }
+    .nav_links {
+      width: 100%;
+      font-size: 15px;
+      font-weight: 500;
+    }
+    .nav_links_li {
+      padding-left: 0px;
+      padding-right: 0px;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -239,8 +299,28 @@ li {
       height: 124px;
       width: 288px;
     }
+    button {
+      padding-left: 5px;
+      padding-right: 5px;
+      font-size: 15px;
+      font-weight: 500;
+    }
     button:hover {
       display: none;
+    }
+    .navigation-wrapper {
+      padding-bottom: 0px;
+      background-color: blueviolet;
+      border: solid red 2px;
+    }
+    .nav_links {
+      width: 100%;
+      font-size: 15px;
+      font-weight: 500;
+    }
+    .nav_links_li {
+      padding-left: 0px;
+      padding-right: 0px;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -262,8 +342,28 @@ li {
       height: 154px;
       width: 358px;
     }
+    button {
+      padding-left: 5px;
+      padding-right: 5px;
+      font-size: 15px;
+      font-weight: 500;
+    }
     button:hover {
       display: none;
+    }
+    .navigation-wrapper {
+      padding-bottom: 0px;
+      background-color: blueviolet;
+      border: solid red 2px;
+    }
+    .nav_links {
+      width: 100%;
+      font-size: 15px;
+      font-weight: 500;
+    }
+    .nav_links_li {
+      padding-left: 0px;
+      padding-right: 0px;
     }
     .frame-overlay-dark-grey {
       display: none;
