back to where it was

--- a/src/App.css
+++ b/src/App.css
@@ -180,14 +180,14 @@ li {
       padding-right: 5px;
       font-size: 15px;
       font-weight: 500;
-      border: 2px solid green;
+      border: 2px solid blue;
     }
     button:hover {
       display: none;
     }
     .navigation-wrapper {
       padding-bottom: 0px;
-      background-color: violet;
+      background-color: blueviolet;
       border: solid red 2px;
     }
     .nav_links {
@@ -223,14 +223,14 @@ li {
       padding-right: 5px;
       font-size: 15px;
       font-weight: 500;
-      border: 2px solid green;
+      border: 2px solid blue;
     }
     button:hover {
       display: none;
     }
     .navigation-wrapper {
       padding-bottom: 0px;
-      background-color: violet;
+      background-color: blueviolet;
       border: solid red 2px;
     }
     .nav_links {
@@ -264,14 +264,14 @@ li {
       padding-right: 5px;
       font-size: 15px;
       font-weight: 500;
-      border: 2px solid green;
+      border: 2px solid blue;
     }
     button:hover {
       display: none;
     }
     .navigation-wrapper {
       padding-bottom: 0px;
-      background-color: violet;
+      background-color: blueviolet;
       border: solid red 2px;
     }
     .nav_links {
@@ -306,14 +306,14 @@ li {
       padding-right: 5px;
       font-size: 15px;
       font-weight: 500;
-      border: 2px solid green;
+      border: 2px solid blue;
     }
     button:hover {
       display: none;
     }
     .navigation-wrapper {
       padding-bottom: 0px;
-      background-color: violet;
+      background-color: blueviolet;
       border: solid red 2px;
     }
     .nav_links {
@@ -350,14 +350,14 @@ li {
       padding-right: 5px;
       font-size: 15px;
       font-weight: 500;
-      border: 2px solid green;
+      border: 2px solid blue;
     }
     button:hover {
       display: none;
     }
     .navigation-wrapper {
       padding-bottom: 0px;
-      background-color: violet;
+      background-color: blueviolet;
       border: solid red 2px;
     }
     .nav_links {
