why blue? change nav_links_li to green

--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,7 @@ nav {
   padding-left: 2px;
   padding-right: 2px;
   height: 38px;
-  color: hsl(240,100%,50%);
+  color: green;
 }
 
 /* NAVIGATION END */
