navbar working blue removed :hover is ON

--- a/src/App.css
+++ b/src/App.css
@@ -179,11 +179,10 @@ li {
       padding-right: 5px;
       font-size: 15px;
       font-weight: 500;
-      border: 2px solid blue;
     }
     .navigation-wrapper {
       padding-bottom: 0px;
-      background-color: blueviolet;
+      background-color: violet;
       border: solid red 2px;
     }
     .nav_links {
@@ -219,11 +218,10 @@ li {
       padding-right: 5px;
       font-size: 15px;
       font-weight: 500;
-      border: 2px solid blue;
     }
     .navigation-wrapper {
       padding-bottom: 0px;
-      background-color: blueviolet;
+      background-color: violet;
       border: solid red 2px;
     }
     .nav_links {
@@ -257,11 +255,10 @@ li {
       padding-right: 5px;
       font-size: 15px;
       font-weight: 500;
-      border: 2px solid blue;
     }
     .navigation-wrapper {
       padding-bottom: 0px;
-      background-color: blueviolet;
+      background-color: violet;
       border: solid red 2px;
     }
     .nav_links {
@@ -296,11 +293,10 @@ li {
       padding-right: 5px;
       font-size: 15px;
       font-weight: 500;
-      border: 2px solid blue;
     }
     .navigation-wrapper {
       padding-bottom: 0px;
-      background-color: blueviolet;
+      background-color: violet;
       border: solid red 2px;
     }
     .nav_links {
@@ -337,11 +333,10 @@ li {
       padding-right: 5px;
       font-size: 15px;
       font-weight: 500;
-      border: 2px solid blue;
     }
     .navigation-wrapper {
       padding-bottom: 0px;
-      background-color: blueviolet;
+      background-color: violet;
       border: solid red 2px;
     }
     .nav_links {
