--- a/src/App.css
+++ b/src/App.css
@@ -139,16 +139,41 @@ nav {
   transform: translate(-50%, -50%);
 }
 
-.overlay-left,
-.overlay-right {
-  background-color: yellow;
-  width: 100%;
-  height: 100%;
-  pointer-events: none; /* Makes these divs click-through */
-  z-index: 10;
+/* FRAME around the image = END */
+
+/* overlap boxes START */
+
+.overlap-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;  
 }
 
-/* FRAME around the image = END */
+.box {
+  padding: 20px;
+  text-align: center;
+  height: 100px;
+  width: 100vw;
+}
+
+.box-001 {
+  flex: 1;
+  background-color: lightblue;
+  width: 200px;
+}
+.box-002 {
+  background-color: lightcoral;
+  width: 600px;
+  margin: 0 auto;
+}
+.box-003 {
+  flex: 1;
+  background-color: lightgreen;
+  width: 200px;
+}
+
+/* overlap boxes END */
+
 
 h1 {
   margin-top: 280px;
