position working the first time on laptop screen

--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@ button:active {
 /* NAVIGATION START */
 
 .navigation-wrapper {
-  padding-bottom: 22px;
+  padding-bottom: 34px;
 }
 
 .navigation_position {
@@ -118,8 +118,8 @@ nav {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 40%;
-  height: 104%;
+  width: 600px;
+  height: 740px;
   border: 5px solid hsl(0, 0%, 30%);
   pointer-events: none;
   z-index: 1;
@@ -130,8 +130,8 @@ nav {
   position: absolute;
   top: 50%; 
   left: 50%;
-  width: 40%; 
-  height: 104%;
+  width: 600px;
+  height: 740px;
   border: 5px solid hsl(0, 0%, 70%);
 
   pointer-events: none;
@@ -146,6 +146,7 @@ nav {
 .overlap-container {
   display: flex;
   position: absolute;
+  align-items: stretch;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -157,33 +158,24 @@ nav {
   pointer-events: none; 
 }
 
-/* .box {
-  padding: 20px;
-  height: 100%;
-  width: 100vw;
-  pointer-events: none;
-} */
-
 .box-left {
   flex: 1;
-  background-color: lightblue;
-  width: 600px;
-  height: 740px;
+  background-color: hsla(0,0%,100%,1);
+  height: 100%;
   pointer-events: none;
 
 }
 .box-middle {
   background-color: hsla(0,0%,0%,0);
   width: 600px;
-  height: 740px;
+  height: 100%;
   margin: 0 auto;
 
 }
 .box-right {
   flex: 1;
-  background-color: lightgreen;
-  width: 600px;
-  height: 740px;
+  background-color: hsla(0,0%,100%,1);
+  height: 100%;
   pointer-events: none;
 }
 
