styling rolled out - buy button introduced

--- a/src/App.css
+++ b/src/App.css
@@ -118,7 +118,7 @@ nav {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 600px;
+  width: 660px;
   height: 740px;
   border: 5px solid hsl(0, 0%, 20%);
   pointer-events: none;
@@ -130,7 +130,7 @@ nav {
   position: absolute;
   top: 50%; 
   left: 50%;
-  width: 600px;
+  width: 660px;
   height: 740px;
   border: 5px solid hsl(0, 0%, 80%);
 
@@ -158,23 +158,33 @@ nav {
   pointer-events: none; 
 }
 
-.box-left {
+.box-white-left {
   flex: 1;
   background-color: hsla(0,0%,100%,1);
   height: 100%;
   pointer-events: none;
-
 }
-.box-middle {
+.box-black-left {
+  flex: 1;
+  background-color: hsla(0,0%,0%,1);
+  height: 100%;
+  pointer-events: none;
+}
+.box-transparent-middle {
   background-color: hsla(0,0%,0%,0);
-  width: 600px;
+  width: 660px;
   height: 100%;
   margin: 0 auto;
-
 }
-.box-right {
+.box-white-right {
   flex: 1;
   background-color: hsla(0,0%,100%,1);
+  height: 100%;
+  pointer-events: none;
+}
+.box-black-right {
+  flex: 1;
+  background-color: hsla(0,0%,0%,1);
   height: 100%;
   pointer-events: none;
 }
