buy page cleaned up ready for image build with NO carousel

--- a/src/App.css
+++ b/src/App.css
@@ -113,11 +113,18 @@ nav {
   margin-bottom: 80px;
 }
 
+.carousel-container-buy {
+  position: relative;
+  margin-bottom: 80px;
+  transform: scale(0.5);
+  transform-origin: left;
+}
+
 .frame-overlay-dark-grey {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 660px;
+  width: 670px;
   height: 740px;
   border: 5px solid hsl(0, 0%, 20%);
   pointer-events: none;
@@ -129,10 +136,9 @@ nav {
   position: absolute;
   top: 50%; 
   left: 50%;
-  width: 660px;
+  width: 670px;
   height: 740px;
   border: 5px solid hsl(0, 0%, 80%);
-
   pointer-events: none;
   z-index: 1;
   transform: translate(-50%, -50%);
@@ -171,7 +177,7 @@ nav {
 }
 .box-transparent-middle {
   background-color: hsla(0,0%,0%,0);
-  width: 660px;
+  width: 670px;
   height: 100%;
   margin: 0 auto;
 }
