--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,14 @@
   max-width: 100vw;
 }
 
+.carousel_white_buy {
+  background-color: white;
+  /* margin-top: -15vw; */
+  max-width: 100vw;
+  transform: scale(0.6);
+  transform-origin: top center;
+}
+
 .carousel_black {
   background-color: black;
   margin-top: 48px;
@@ -113,13 +121,6 @@ nav {
   margin-bottom: 80px;
 }
 
-.carousel-container-buy {
-  position: relative;
-  margin-bottom: 80px;
-  transform: scale(0.5);
-  transform-origin: left;
-}
-
 .frame-overlay-dark-grey {
   position: absolute;
   top: 50%;
@@ -145,6 +146,23 @@ nav {
 }
 
 /* FRAME around the image = END */
+
+/* SINGLE IMAGE display = START */
+
+.single-image-display {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%; /* Adjust width as needed */
+}
+
+.single-image-display img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain; /* Ensures image fits within container */
+}
+
+/* SINGLE IMAGE display = END */
 
 /* overlap boxes START */
 
